--- a/index.html
+++ b/index.html
@@ -10,33 +10,46 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&family=Stick+No+Bills:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
-</head> 
+</head>
 
 <body>
+  
   <div class="container">
+    <ul class="skip-links">
+      <li><a href="#nav">Skip to Home</a></li> 
+      <li><a href="#nav">Skip to Reservation</a></li>
+      </ul>
+   
     <div class="site-header">
+    <header role="banner">
       <h1>Jam Box Studios</h1>
+    </header>
+
       <div class="main-nav">
+
+        <nav id="nav">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
-          <li><a href="#">Reservation</a></li>
+          <li><a href="#" >Reservation</a></li>
           <li><a href="#">Studio</a></li>
         </ul>
+      </nav>
       </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
+      <img src="https://placekitten.com/1200/900" alt="banner"> 
     </div>
+    <article role="main">
     <div class="main-content">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
       <div class="owner">
         <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+        <ul itemscope itemtype="https://schema.org/Person">
+          <li itemprop="name">Name: John Doe</li>
+          <li itemprop="Job">Title: CEO</li>
+          <li itemprop="email">Email: johnjoe@jambox.ca</li>
+          <li itemprop="Phone">Phone: 613-000-0000</li>
         </ul>
         <h1>Address</h1>
         <p>
@@ -45,7 +58,9 @@
           Musicville, Danceistan
           B3T 0L0
         </p>
+      </article>
       </div>
+      <main></main>
       <div class="contact-section">
         <h1>Contact Us</h1>
         <form action="thanks.html">
@@ -58,11 +73,28 @@
           <button type="submit">Send</button>
         </form>
       </div>
+    </main>
     </div>
+    <footer role="contentinfo">
     <div class="site-footer">
       &copy; 2021 Jam Box Studios
+    </footer>
     </div>
   </div>
 </body>
 
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
